home page + mobile responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="iconify" data-inline="false" data-icon="carbon:home"></span>
                 </div>
             </div>
-            <h2>Do you need a house?</h2>
+            <p>Do you need a house?</p>
             <p>Get professional help and advice for your home purchase.</p>
         </div>
         <div class="area-box">
@@ -49,57 +49,190 @@
                     <span class="iconify" data-inline="false" data-icon="carbon:tools"></span>
                 </div>
             </div>
-            <h2>Do you need a house?</h2>
-            <p>Get professional help and advice for your home purchase.</p>
+            <p>Dreaing about building?</p>
+            <p>Access relevant articles, feature and experitise within house building.</p>
         </div>
         <div class="area-box">
             <div class="circle-box">
                 <div class="circle">
                     <span class="iconify" data-inline="false" data-icon="carbon:paint-brush"></span>                </div>
             </div>
-            <h2>Do you need a house?</h2>
-            <p>Get professional help and advice for your home purchase.</p>
+            <p>Your house needs renovation?</p>
+            <p>Our universe is filled up with reliable help regarding any renovation.</p>
         </div>
     </div>
 
 <!-- characteristics -->
-<div class="welcome-text">
-    <h2>Welcome in Huskobet</h2>
-    <p>Denmark’s largest benefit club for house buyers</p>
-</div>
-<div class="welcome-container">
-    <div class="column">
-    <div class="welcome-content">
-        <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span>        <div>
-        <h3>Network of experienced advisors</h3>
-        <p>We collaborate with network of independent and experienced advisors in the whole Denmark</p>
+    <div class="welcome-text">
+        <h2>Welcome in Huskobet</h2>
+        <h2>Denmark’s largest benefit club for house buyers</h2>
+    </div>
+    <div class="welcome-container">
+        
+        <div class="column">
+            <div class="welcome-content">
+                <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span>        <div>
+                <h3>Network of experienced advisors</h3>
+                <p>We collaborate with network of independent and experienced advisors in the whole Denmark</p>
+                </div>
+            </div>
+
+            <div class="welcome-content">
+                <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        <div>
+                <h3>Inpirational articles</h3>
+                <p>You can access relevant articles that will guide you towards the house of your dreams</p>
+                </div>
+            </div>
         </div>
+            <div class="column">
+            <div class="welcome-content">
+                <span class="iconify" data-inline="false" data-icon="carbon:star"></span>
+                <div>
+                <h3>Benefits from our partners</h3>
+                <p>Make the right choices, save money and take advantage of many advantages of the benefit club</p>
+                </div>
+            </div>
+            <div class="welcome-content">
+                <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        <div>
+                <h3>Personal desk for our members</h3>
+                <p>We provide our members with their own personal dashboard, so they can gather everything in one place</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+<!-- numbers -->
+    <div class="numbers-container">
+        <div class="number-box">
+            <h2>+450</h2>
+            <h3>Helpful articles</h3>
+            <p>Get inspiration and good advice from our articles universe</p>
+        </div>
+
+        <div class="number-box">
+            <h2>+350</h2>
+            <h3>Professional advisors</h3>
+            <p>Nationwide network of independent buyer advisors</p>
+        </div>
+
+        <div class="number-box">
+            <h2>+60</h2>
+            <h3>Reliable articles</h3>
+            <p>Get support in law, insurance, finances and technology</p>
+        </div>
+
     </div>
 
-    <div class="welcome-content">
-        <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        <div>
-        <h3>Inpirational articles</h3>
-        <p>You can access relevant articles that will guide you towards the house of your dreams</p>
+<!-- comparison -->
+    <div class="welcome-text">
+        <h2>Not a member yet?</h2>
+        <h2>We prepared lots of benefits for our members</h2>
+    </div>
+
+    <div class="comparisons-container">
+        <div class="list-box">
+            <h3>Just a visitor</h3>
+
+            <div style="margin-top: 32px;">
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Articles universe</h3>
+                    <p>Relevant and inspirational articles</p>
+                    </div>
+                </div>
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Knowledge universe</h3>
+                    <p>Professional experts and advisors</p>
+                    </div>
+                </div>
+                <div class="list-items" style="opacity: .3;">
+                    <span class="iconify" data-inline="false" data-icon="carbon:misuse-alt"></span>
+                    <div>
+                    <h3>Personal desk</h3>
+                    <p>Personal dashboard for the members</p>
+                    </div>
+                </div>
+                <div class="list-items" style="opacity: .3;">
+                    <span class="iconify" data-inline="false" data-icon="carbon:misuse-alt"></span>
+                    <div>
+                    <h3>House services</h3>
+                    <p>Services withing 4 fundamental areas</p>
+                    </div>
+                </div>
+                <div class="list-items" style="opacity: .3;">
+                    <span class="iconify" data-inline="false" data-icon="carbon:misuse-alt"></span>
+                    <div>
+                    <h3>Discounts and offers</h3>
+                    <p>Variety of exlusive discounts </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="list-box right-blue">
+            <h3>Member of Huskobet</h3>
+
+            <div style="margin-top: 32px;">
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Articles universe</h3>
+                    <p>Relevant and inspirational articles</p>
+                    </div>
+                </div>
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Knowledge universe</h3>
+                    <p>Professional experts and advisors</p>
+                    </div>
+                </div>
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Personal desk</h3>
+                    <p>Personal dashboard for the members</p>
+                    </div>
+                </div>
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>House services</h3>
+                    <p>Services withing 4 fundamental areas</p>
+                    </div>
+                </div>
+                <div class="list-items">
+                    <span class="iconify" data-inline="false" data-icon="carbon:checkmark-outline"></span>
+                    <div>
+                    <h3>Discounts and offers</h3>
+                    <p>Variety of exlusive discounts </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-</div>
-<div class="column">
-    <div class="welcome-content">
-        <span class="iconify" data-inline="false" data-icon="carbon:star"></span>
-        <div>
-        <h3>Benefits from our partners</h3>
-        <p>Make the right choices, save money and take advantage of many advantages of the benefit club</p>
-        </div>
+    <!-- <button type="submit" class="signup-btn">Join for free</button> -->
+
+<!--  abput us -->
+<div class="about-us">
+    <div class="about-text">
+        <h2>Who we are?</h2>
+        <p>Huskøbet is a new and smart service, where you can easily and quickly get an overview of your home buying journey. 
+            We are home buyers - for home buyers. The benefits club gathers members and negotiates benefits for all. 
+            And best part - being a member is 100% free.</p>
+        <button type="submit" class="signup-btn">Read more</button>
     </div>
-    <div class="welcome-content">
-        <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        <div>
-        <h3>Personal desk for our members</h3>
-        <p>We provide our members with their own personal dashboard, so they can gather everything in one place</p>
-        </div>
-    </div>
+    <img src="/img/huskobet-partners.png" alt="Huskobet partners">
+    <!-- <div class="about-imgs">
+
+    </div> -->
 </div>
 
-</div>
 </div>
 
 <!-- icons -->
