--- a/index.html
+++ b/index.html
@@ -228,10 +228,45 @@
         <button type="submit" class="signup-btn">Read more</button>
     </div>
     <img src="/img/huskobet-partners.png" alt="Huskobet partners">
-    <!-- <div class="about-imgs">
-
-    </div> -->
 </div>
+
+<!-- testimonials -->
+<div class="testimonials-container">
+    <div class="testimonial">
+        <p>“Finances advisors were very helpful. The team helped me irreplaceable. 
+            I had a problem with beating down the price, but they took care of it right away.”</p>
+        <div class="stars">
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+        </div>
+        <p>Anne Nielsen</p>
+    </div>
+
+    <div class="testimonial">
+        <p>“Finances advisors were very helpful. The team helped me irreplaceable. 
+            I had a problem with beating down the price, but they took care of it right away.”</p>
+        <div class="stars">
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+        </div>
+        <p>Anne Nielsen</p>
+    </div>
+
+    <div class="testimonial">
+        <p>“Finances advisors were very helpful. The team helped me irreplaceable. 
+            I had a problem with beating down the price, but they took care of it right away.”</p>
+        <div class="stars">
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+        </div>
+        <p>Anne Nielsen</p>
+    </div>
+    
+</div>
+
 
 </div>
 
