home page, mobile responsive

--- a/index.html
+++ b/index.html
@@ -266,7 +266,34 @@
     </div>
     
 </div>
-
+<!-- faq -->
+<div class="faq-container">
+    <div class="faq-text">
+        <h2>Do you have any questions?</h2>
+        <p>If you have any questions, please feel free to contact us. 
+            We’ll answer as fast as possible to give you professional 
+            help to defeat your concerns.</p>
+        <button type="submit" class="signup-btn">Contact us</button>
+    </div>
+    <div class="faq-questions">
+        <div class="question">
+            <h4 style="display: inline-block;">Is membership free?</h4>
+            <span class="iconify" data-inline="false" data-icon="carbon:chevron-down" data-flip="horizontal" style="font-size: 1.75em; color: #002173; float: right;"></span>
+        </div>
+        <div class="question">
+            <h4 style="display: inline-block;">How to get started with you?</h4>
+            <span class="iconify" data-inline="false" data-icon="carbon:chevron-down" data-flip="horizontal" style="font-size: 1.75em; color: #002173; float: right;"></span>
+        </div>
+        <div class="question">
+            <h4 style="display: inline-block;">How much do the services cost?</h4>
+            <span class="iconify" data-inline="false" data-icon="carbon:chevron-down" data-flip="horizontal" style="font-size: 1.75em; color: #002173; float: right;"></span>
+        </div>
+        <div class="question">
+            <h4 style="display: inline-block;">What is your cancellation policy?</h4>
+            <span class="iconify" data-inline="false" data-icon="carbon:chevron-down" data-flip="horizontal" style="font-size: 1.75em; color: #002173; float: right;"></span>
+        </div>
+    </div>
+</div>
 
 </div>
 
