--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="home-wrapper">
-<!-- universes - buy, renovate, build -->
+    <!-- universes - buy, renovate, build -->
     <div class="areas-container">
         <div class="area-box">
             <div class="circle-box">
@@ -72,14 +72,18 @@
         
         <div class="column">
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span>        <div>
+                <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span> 
+                <div class="icon-bcg"></div> 
+                <div>      
                 <h3>Network of experienced advisors</h3>
                 <p>We collaborate with network of independent and experienced advisors in the whole Denmark</p>
                 </div>
             </div>
 
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        <div>
+                <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        
+                <div class="icon-bcg"></div> 
+                <div>
                 <h3>Inpirational articles</h3>
                 <p>You can access relevant articles that will guide you towards the house of your dreams</p>
                 </div>
@@ -88,13 +92,16 @@
             <div class="column">
             <div class="welcome-content">
                 <span class="iconify" data-inline="false" data-icon="carbon:star"></span>
+                <div class="icon-bcg"></div> 
                 <div>
                 <h3>Benefits from our partners</h3>
                 <p>Make the right choices, save money and take advantage of many advantages of the benefit club</p>
                 </div>
             </div>
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        <div>
+                <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        
+                <div class="icon-bcg"></div> 
+                <div>
                 <h3>Personal desk for our members</h3>
                 <p>We provide our members with their own personal dashboard, so they can gather everything in one place</p>
                 </div>
@@ -102,6 +109,7 @@
         </div>
 
     </div>
+</div>
 <!-- numbers -->
     <div class="numbers-container">
         <div class="number-box">
@@ -124,6 +132,23 @@
 
     </div>
 
+<!-- solution -->
+<div class="home-wrapper">
+    <div class="solution-container">
+        <div class="solution-text">
+            <h2>Gather everything in one place</h2>
+            <p>Everything gathered in one place, so you can quickly and easily get an 
+                overview of your housing journey and get dressed to make the right housing choices.</p>
+            <button type="submit" class="signup-btn">Join for free</button>
+        </div>
+        <div>
+        <img src="/img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
+        <img src="/img/iphone.png" alt="Dashboard on iphone screen" style="position: absolute; right: 0; transform: translate(-96px, 132px);">
+        </div>
+    </div>
+</div>
+
+<div class="home-wrapper">
 <!-- comparison -->
     <div class="welcome-text">
         <h2>Not a member yet?</h2>
@@ -218,7 +243,9 @@
 
         </div>
     </div>
-    <!-- <button type="submit" class="signup-btn">Join for free</button> -->
+    <div class="button-container">
+        <button type="submit" class="signup-btn">Join for free</button>
+    </div>
 
 <!--  abput us -->
 <div class="about-us">
@@ -231,7 +258,7 @@
     </div>
     <img src="/img/huskobet-partners.png" alt="Huskobet partners">
 </div>
-
+</div>
 <!-- testimonials -->
 <div class="testimonials-container">
     <div class="testimonial">
@@ -246,28 +273,30 @@
     </div>
 
     <div class="testimonial">
-        <p>“Finances advisors were very helpful. The team helped me irreplaceable. 
-            I had a problem with beating down the price, but they took care of it right away.”</p>
+        <p>“Huskobet provides great services! 
+            I was a bit worried about my house purchase, but it wasn’t a problem at all. 
+            I definitely recommend them!”</p>
         <div class="stars">
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
         </div>
-        <p>Anne Nielsen</p>
+        <p>Peter Hansen</p>
     </div>
 
     <div class="testimonial">
-        <p>“Finances advisors were very helpful. The team helped me irreplaceable. 
-            I had a problem with beating down the price, but they took care of it right away.”</p>
+        <p>“The Construction Review service was quick, courteous and very helpful. 
+            They helped me with my first house purchase. Five stars for you!”</p>
         <div class="stars">
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
         </div>
-        <p>Anne Nielsen</p>
+        <p>Tobias Petersen</p>
     </div>
     
 </div>
+<div class="home-wrapper">
 <!-- faq -->
 <div class="faq-container">
     <div class="faq-text">
@@ -303,14 +332,14 @@
 
 <!-- partners -->
 <div class="partners-container">
-    <img src="/img/bofinans-logo.png" alt="Partner logo">
-    <img src="/img/bofinans-logo.png" alt="Partner logo">
-    <img src="/img/bofinans-logo.png" alt="Partner logo">
-    <img src="/img/bofinans-logo.png" alt="Partner logo">
-    <img src="/img/bofinans-logo.png" alt="Partner logo">
+    <img src="/img/bofinans.png" alt="Partner logo">
+    <img src="/img/bofinans.png" alt="Partner logo">
+    <img src="/img/bofinans.png" alt="Partner logo">
+    <img src="/img/bofinans.png" alt="Partner logo">
+    <img src="/img/bofinans.png" alt="Partner logo">
+</div>
 </div>
 
-</div>
 
 <!-- foter -->
 <footer>
