home page is finished, and kinda responsive

--- a/dashboard.html
+++ b/dashboard.html
@@ -198,6 +198,14 @@
         <!-- Cases -->
         <div class="home-cases">
             <h2>Cases</h2>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Sort by<span onclick="myFunction()" class="iconify" data-inline="false" data-icon="carbon:chevron-down" data-flip="horizontal" style="font-size: 1.25em; color: #002173; vertical-align: middle;"></span></button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="#">Type</a>
+                  <a href="#">Name</a>
+                  <a href="#">Date</a>
+                </div>
+              </div>
                 <a href="#case-example" style="text-decoration: none;"><div class="case-box">
                     <div><div class="active status-mobile">Active</div></div>
                     <p><span>Service:</span><br>Land trade</p>
