--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <nav class="topnav-home">
     <a href="#"><span class="iconify" data-inline="false" data-icon="carbon:menu"></span></a>
     <a href="#"><img src="/img/huskobet-white-logo.png" alt="Huskobet white logo"</a>
-    <a href="#"><span class="iconify" data-inline="false" data-icon="carbon:user"></span></a>
+    <a href="dashboard.html"><span class="iconify" data-inline="false" data-icon="carbon:user"></span></a>
 </nav>
 
 <div class="hero-banner">
@@ -143,7 +143,7 @@
         </div>
         <div>
         <img src="/img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
-        <img src="/img/iphone.png" alt="Dashboard on iphone screen" style="position: absolute; right: 0; transform: translate(-96px, 132px);">
+        <img src="/img/iphone.png" alt="Dashboard on iphone screen">
         </div>
     </div>
 </div>
@@ -268,6 +268,8 @@
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
         </div>
         <p>Anne Nielsen</p>
     </div>
@@ -280,6 +282,8 @@
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
         </div>
         <p>Peter Hansen</p>
     </div>
@@ -288,6 +292,8 @@
         <p>“The Construction Review service was quick, courteous and very helpful. 
             They helped me with my first house purchase. Five stars for you!”</p>
         <div class="stars">
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
+            <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
             <span class="iconify" data-inline="false" data-icon="carbon:star-filled"></span>
