finishing touches on home page and dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -119,21 +119,21 @@
 
         <div>
             <div class="service-box">
-                <img src="/img/kick-off-service.png">
+                <img src="/img/kickoff-service.png">
                 <h3>Kick-off meeting</h3>
                 <p>We offer our members a free start-up meeting, where together with...</p>
                 <a href="#">Read more</a>
             </div>
 
             <div class="service-box" style="margin-left: 16px;">
-                <img src="/img/purchase-agreement-service.png">
+                <img src="/img/purchase-service.png">
                 <h3>Purchase agreement</h3>
                 <p>The buyer's advisor handles the guidance and review of all conditions...</p>
                 <a href="#">Read more</a>
             </div>
 
             <div class="service-box" style="margin-left: 16px;">
-                <img src="/img/sketchdrawing-service.png">
+                <img src="/img/sketch-service.png">
                 <h3>Sketch drawing</h3>
                 <p>A sketch project is prepared to help you reach your dreams from idea to completed...</p>
                 <a href="#">Read more</a>
@@ -291,9 +291,9 @@
 
                     <div class="file-example">
                         <div>
-                            <p>Doc type</p>
-                            <p>Doc name</p>
-                            <p>Doc name</p>
+                            <p>Document</p>
+                            <p>condition-report.pdf</p>
+                            <p>10/04/2021</p>
                         </div>
                         <div>
                             <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -303,9 +303,9 @@
 
                     <div class="file-example">
                         <div>
-                            <p>Doc type</p>
-                            <p>Doc name</p>
-                            <p>Doc name</p>
+                            <p>Document</p>
+                            <p>insurance.pdf</p>
+                            <p>01/04/2021</p>
                         </div>
                         <div>
                             <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -315,9 +315,9 @@
 
                     <div class="file-example">
                         <div>
-                            <p>Doc type</p>
-                            <p>Doc name</p>
-                            <p>Doc name</p>
+                            <p>Offer</p>
+                            <p>land-trade-offer2.pdf</p>
+                            <p>28/03/2021</p>
                         </div>
                         <div>
                             <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -384,7 +384,7 @@
 
 <!-- mobile case example-advisor -->
 <section id="advisor-mobile" class="page">
-    <div class="wrapper">
+    <div class="wrapper extra">
         <h3>Advisor</h3>
         <a href="#case-example" style="margin-bottom: 24px;"><span class="iconify" data-inline="false" data-icon="carbon:redo" data-flip="horizontal" style="font-size: 1.5em; color: #002173; vertical-align: bottom; margin-right: 8px;"></span>Go back to the case</a>
         <div class="mobile-white-bcg">
@@ -399,7 +399,7 @@
 
 <!-- mobile case example-files -->
 <section id="files-mobile" class="page">
-    <div class="wrapper">
+    <div class="wrapper extra">
         <h3>Files</h3>
         <a href="#case-example" style="margin-bottom: 24px;"><span class="iconify" data-inline="false" data-icon="carbon:redo" data-flip="horizontal" style="font-size: 1.5em; color: #002173; vertical-align: bottom; margin-right: 8px;"></span>Go back to the case</a>
         <!-- extra features -->
@@ -472,7 +472,7 @@
 
 <!-- mobile case example-chat -->
 <section id="chat-mobile" class="page">
-    <div class="wrapper">
+    <div class="wrapper extra">
         <h3>Chat</h3>
         <a href="#case-example" style="margin-bottom: 24px;"><span class="iconify" data-inline="false" data-icon="carbon:redo" data-flip="horizontal" style="font-size: 1.5em; color: #002173; vertical-align: bottom; margin-right: 8px;"></span>Go back to the case</a>
         <div class="mobile-white-bcg">
@@ -561,7 +561,7 @@
                         <p style="margin: 0 0 8px 0; height: 56px;">Premium monthly subscription for 99kr</p>
                         <a href="#">Get access</a>
                     </div>
-                    <div class="discount-example">
+                    <div class="discount-example" style="margin-right: 0;">
                         <img src="/img/hbo.png" alt="HBO logo">
                         <p class="discount-headline">HBO</p>
                         <p style="margin: 0 0 8px 0; height: 56px;">10% discount for first-time subscribers</p>
@@ -594,7 +594,7 @@
                         <p>House renovation is a very big step. Are you well-prepared for that?</p>
                         <a href="#">Take a test</a>
                     </div>
-                    <div class="test-example">
+                    <div class="test-example"  style="margin-right: 0;">
                         <span class="iconify" data-inline="false" data-icon="carbon:tools-alt" style="font-size: 2.5em; color: #002173;"></span>
                         <p>Is house rebuilding going around in your head? Check if you’re equipped enough!</p>
                         <a href="#">Take a test</a>
@@ -609,7 +609,9 @@
                 <a href="#" style="float: right;">See all articles</a>
                 <div class="articles-flexbox">
                     <div class="article-example">
-                        <img src="/img/article-img.jpg" alt="Article img">
+                        <div>
+                        <img src="/img/article1.jpg" alt="Article img">
+                        </div>
                         <div>
                         <h4>Housing prices in March 2021 set new records</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
@@ -618,7 +620,9 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article2-img.jpg" alt="Article img">
+                        <div>
+                        <img src="/img/article4.jpg" alt="Article img">
+                        </div>
                         <div>
                         <h4>Construction contract helps to manage your property</h4>
                         <p>If you are going to build a new house, it is crucial that you have complete control over the agreement...</p><br>
@@ -627,7 +631,9 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article3-img.jpg" alt="Article img">
+                        <div>
+                        <img src="/img/article3.jpg" alt="Article img">
+                        </div>
                         <div>
                         <h4>The bank's loan terms are also negotiable</h4>
                         <p>Most people are quite authoritative when it comes to their bank adviser. That is why very few people think of...</p><br>
@@ -636,7 +642,9 @@
                     </div>
 
                     <div class="article-example">
-                        <img src="/img/article4-img.jpg" alt="Article img">
+                        <div>
+                        <img src="/img/article2.jpg" alt="Article img">
+                        </div>
                         <div>
                         <h4>How to approach a renovation</h4>
                         <p>When you look at older houses, the renovation projects can quickly seem unmanageable ...</p><br>
