--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
 <!-- partners -->
 <div class="partners-container">
     <img src="/img/bofinans.png" alt="Partner logo">
-    <img src="/img/bofinans.png" alt="Partner logo">
-    <img src="/img/bofinans.png" alt="Partner logo">
-    <img src="/img/bofinans.png" alt="Partner logo">
-    <img src="/img/bofinans.png" alt="Partner logo">
+    <img src="/img/kaark-logo.png" alt="Partner logo">
+    <img src="/img/lawyer-logo.png" alt="Partner logo">
+    <img src="/img/robinhus-logo.png" alt="Partner logo">
+    <img src="/img/finanse-logo.png" alt="Partner logo">
 </div>
 </div>
 
