small changes on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
     <img src="/img/huskobet-white-logo.png" alt="Huskobet white logo">
     <ul id="navlist">
       <li id="active">User name</li>
-      <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:event-schedule"></span></li>
+      <!-- <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:event-schedule"></span></li> -->
       <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:help"></span></li>
       <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:login"></span></li>
     </ul>
@@ -302,7 +302,6 @@
                             <p>28/03/2021</p>
                         </div>
                         <div>
-                            <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
                             <span class="iconify" data-inline="false" data-icon="carbon:download" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
                         </div>
                     </div>
