home page is responsive now

--- a/index.html
+++ b/index.html
@@ -113,18 +113,21 @@
 <!-- numbers -->
     <div class="numbers-container">
         <div class="number-box">
+            <!-- <div class="value" akhi="450">0</div> -->
             <h2>+450</h2>
             <h3>Helpful articles</h3>
             <p>Get inspiration and good advice from our articles universe</p>
         </div>
 
         <div class="number-box">
+            <!-- <div class="value" akhi="350">0</div> -->
             <h2>+350</h2>
             <h3>Professional advisors</h3>
             <p>Nationwide network of independent buyer advisors</p>
         </div>
 
         <div class="number-box">
+            <!-- <div class="value" akhi="60">0</div> -->
             <h2>+60</h2>
             <h3>Reliable articles</h3>
             <p>Get support in law, insurance, finances and technology</p>
@@ -347,6 +350,7 @@
 </div>
 
 
+
 <!-- foter -->
 <footer>
     <img src="/img/huskobet-white-logo.png">
@@ -370,13 +374,15 @@
     </div>
 </footer>
 
+<script src="numbers.js"></script>
+
 <!-- icons -->
 <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
 <!-- animate on scroll library -->
-<script>
+<!-- <script>
     AOS.init();
-  </script>
+  </script> -->
   
 </body>
 </html>
